--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -111,7 +111,7 @@ article {
     .book-title {
         font-weight: 500;
         font-size: $font-size-heading2-mob;
-        letter-spacing: 0.5px;
+        letter-spacing: -0.2px;
         // font-family: 'roboto', sans-serif;
     }
 
